--- a/index.html
+++ b/index.html
@@ -1,26 +1,63 @@
-<!DOCTYPE html>
-<html >
-<head>
-  <meta charset="UTF-8">
-  <title>Moneta Space</title>
-  
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+<!doctype html>
+<html lang="en">
+  <head>
+    <title>Moneta.Space - Расширение-майнер для заработка на криптовалюте</title>
+    <meta name="Description" content="Расширение-майнер для заработка на майнинге криптовалюты в фоновом режиме без вложений. Вам не нужно тратить своё время на заработок, так как расширение работает полностью в автоматическом режиме. Майнер начнёт работу сразу после установки. Регистрация не требуется.">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Molengo'>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 
-      <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="pics/favicon.png" type="image/png">
+  </head>
+  <body>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-11 col-md-6 moneta-padding">
+        <img src="pics/logotype.png" width="128" height="128" class="mx-auto d-block" alt="Moneta.Space Miner">
+      </div>
+    </div>
 
-  
-</head>
+    <div class="row justify-content-center">
+      <div class="col-11 col-md-6"">
+        <p class="lead text-justify">
+          Расширение-майнер для заработка на майнинге криптовалюты в фоновом режиме без вложений. Вам не нужно тратить своё время на заработок, так как расширение работает полностью в автоматическом режиме. Майнер начнёт работу сразу после установки. Регистрация не требуется.
+        </p>
+      </div>
+    </div>
 
-<body>
-  
-<div id="title">
-  <h1>Moneta Space</h1>
-</div>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <div class="row justify-content-center browsers">
+      <div class="col-11 col-md-6">
+        <div class="container">
+          <div class="row">
+            <div class="col-6 py-3">
+              <a href="https://chrome.google.com/webstore/detail/monetaspace-miner/gcnnlhhamnndkbehhmjnlgnlhfjndggl" target="_blank"><img src="pics/chrome.png" class="mx-auto d-block" alt="Moneta.Space Chrome Miner"></a>
+            </div>
+            <div class="col-6 py-3">
+              <a href="https://addons.mozilla.org/ru/firefox/addon/moneta-space/" target="_blank"><img src="pics/firefox.png" class="mx-auto d-block" alt="Moneta.Space Firefox Miner"></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-    <script  src="js/index.js"></script>
+  </div>
 
-</body>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+
+    <script type="text/javascript" src="https://vk.com/js/api/openapi.js?150"></script>
+
+    <!-- VK Widget -->
+    <div id="vk_community_messages"></div>
+    <script type="text/javascript">
+    VK.Widgets.CommunityMessages("vk_community_messages", 156869857, {tooltipButtonText: "Есть вопросы?"});
+    </script>
+  </body>
 </html>
