firefox fuck you

--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
         <div class="container">
           <div class="row pb-3">
 
-            <div class="col-6 col-sm py-3 my-3">
+            <div class="col-12 col-sm py-3 my-3">
               <a href="https://chrome.google.com/webstore/detail/monetaspace-miner/gcnnlhhamnndkbehhmjnlgnlhfjndggl" target="_blank"><img src="pics/chrome.png" class="mx-auto d-block" alt="Moneta.Space Chrome Miner"></a>
             </div>
 
-            <div class="col-6 col-sm py-3 my-3">
+            <!-- <div class="col-6 col-sm py-3 my-3">
               <a href="https://addons.mozilla.org/ru/firefox/addon/moneta-space/" target="_blank"><img src="pics/firefox.png" class="mx-auto d-block" alt="Moneta.Space Firefox Miner"></a>
-            </div>
+            </div> -->
 
-            <div class="col-6 col-sm py-3 my-3">
+            <div class="col-12 col-sm py-3 my-3">
               <a href="https://chrome.google.com/webstore/detail/monetaspace-miner/gcnnlhhamnndkbehhmjnlgnlhfjndggl" class="opera" target="_blank" data-container="body" data-toggle="popover" data-placement="top"><img src="pics/opera.png" class="mx-auto d-block" alt="Moneta.Space Opera Miner"></a>
             </div>
 
-            <div class="col-6 col-sm py-3 my-3">
+            <div class="col-12 col-sm py-3 my-3">
               <a href="https://chrome.google.com/webstore/detail/monetaspace-miner/gcnnlhhamnndkbehhmjnlgnlhfjndggl" class="yandex" target="_blank" data-container="body" data-toggle="popover" data-placement="top"><img src="pics/yandex.png" class="mx-auto d-block" alt="Moneta.Space Chrome Miner"></a>
             </div>
 
